@@ -142,6 +142,13 @@ ActiveXWrapper already in the library, but it is implemented all in
 C++ and therefore does not need any of the modules from win32 all and
 so it is less fragile in the face of changes.
 
+Fixed the ActiveXWrapper problem.  Looks like when the win32com
+modules make a "callback" that they (incorrectly, IMHO) allocate a
+transient thread state structure.  Since wxPython is now saving
+tstates for it's own callbacks it ended up using garbage after
+win32com gots rid of the tstate...
+
+
 
 
 2.3.2.1
